--- a/views/admin/detalle_dupla.html
+++ b/views/admin/detalle_dupla.html
@@ -14,88 +14,58 @@
     <!-- Contenido principal del documento -->
     <main>
         <h2 id="mainTitle"></h2>
-        <!-- titulo principal -->
-        <div class="container-fluid">
-            <div class="row py-4">
-                <h3 class="fw-bold "><i class="bi bi-people-fill"></i> Administrar duplas de empleados</h3>
-                <h6 class="fw-medium text-secondary">Esta sección de gestión de las duplas de empleados. Aquí puedes
-                    manejar todos todas las duplas de los trabajadores registrados en tu página web. <br>
-                    La tabla te permite eliminar, dar de baja, editar, ver datos y
-                    reportes generales de actividad.</h6>
-            </div>
-        </div>
-
-        <!-- Formulario de búsqueda -->
-        <div class="row">
-            <form class="col-sm-12 col-md-12 col-lg-10" id="searchForm">
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 col-sm-12 mt-5">
-                        <input type="search" class="form-control custom-input border-2" id="search" name="search"
-                            placeholder="Nombre o teléfono" required>
-                    </div>
-                    <div class="col-lg-5 col-md-9 col-sm-9 d-flex flex-row align-items-center gap-2 mt-5">
-                        <div class="btn-group">
-                            <button type="submit" class="btn btn-success">
-                                <i class="bi bi-search"></i>
-                            </button>
-                            <button type="reset" class="btn btn-secondary" onclick="fillTable()">
-                                <i class="bi bi-arrow-counterclockwise"></i>
-                            </button>
-                            <button type="button" class="btn btn-warning" onclick="openCreate()">
-                                <i class="bi bi-person-fill-add"></i>
-                            </button>
+        <div id="informacionDupla" class="text-center d-flex justify-content-center">
+            <div class="row">
+                <div class="col-12">
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
+                            <div class="my-3">
+                                <h2 id="" class="">Usuario dupla</h2>
+                                <h4 id="usuarioDupla"></h4>
+                                <h2 id="" class="">Teléfono dupla</h2>
+                                <h4 id="telefonoDupla" class=""></h4>
+                                <h2 id="" class="">Tipo dupla</h2>
+                                <h4 id="tipoDupla" class=""></h4>
+                                <h2 id="" class="">Estado dupla</h2>
+                                <h4 id="estadoDupla" class=""></h4>
+                                <button type="button" class="btn btn-success my-2  w-50 h-20 " onclick="openState()"><h5>Cambiar tipo dupla</h5></button>
+                                <button type="button" class="btn btn-success my-2  w-50 h-20 " onclick="openUpdate()"><h5>Editar dupla</h5></button>
+                                <button type="button" class="btn btn-success my-2  w-50 h-20 " onclick="openPassword()"><h5>Actualizar clave</h5></button>
+                            </div>
                         </div>
-
-                        <!-- Dropdown -->
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                ordenar registros
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 1)">Nombre (A-Z)</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 2)">Nombre descendente
-                                        (Z-A)</a></li>
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 3)">Actualizado
-                                        recientemente</a></li>
-                            </ul>
-                        </div>
-
-                        <!-- filtro por estado -->
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Filtrar por estado
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 4)">Activo</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 5)">Inactivo</a></li>
-                            </ul>
-                        </div>
-
-                        <!-- filtro por tipo -->
-                        <div class="dropdown">
-                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Filtrar por tipo
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 6)">Permanente</a>
-                                </li>
-                                <li><a class="dropdown-item" href="#" onclick="readAllTable(null, 7)">Temporal</a>
-                                </li>
-                            </ul>
+                        <div class="col-12 col-lg-6" id="ubicacionDupla">
+                            <h4>ultima ubicación registrad</h4>
                         </div>
                     </div>
                 </div>
-            </form>
-        </div>
-        <p id="rowsFound" class=" fw-bold mt-3"></p>
-
-        <!-- Contenedor para la tabla con scroll -->
-        <div id="duplas" class="justify-content-center row">
+                <div class="col-12">
+                    <div class="row mt-4">
+                        <div class="col-12 col-lg-6">
+                            <h1>Empleado 1</h1>
+                            <div class="d-flex justify-content-center mt-2">
+                                <img src="" alt="" id="empleadoImagen1"
+                                    onerror="this.onerror=null; this.src='../../resources/images/error/404Empleado.png'"
+                                    style="width: 200px; height: 200px; object-fit: cover; border-radius: 10px;">
+                            </div>
+                            <h3 class="mt-3" id="">Nombre empleado</h3>
+                            <h5 class="mt-2" id="nombreEmpleado1"></h5>
+                            <h3 class="mt-3" id="">teléfono personal empleado</h3>
+                            <h5 class="mt-2" id="telefonoEmpleado1"></h5>
+                        </div>
+                        <div class="col-12 col-lg-6">
+                            <h1>Empleado 2</h1>
+                            <div class="d-flex justify-content-center mt-2">
+                                <img src="" alt="" id="empleadoImagen2"
+                                    style="width: 200px; height: 200px; object-fit: cover; border-radius: 10px;">
+                            </div>
+                            <h3 class="mt-3" id="">Nombre empleado</h3>
+                            <h5 class="mt-2" id="nombreEmpleado2"></h5>
+                            <h3 class="mt-3" id="">teléfono personal empleado</h3>
+                            <h5 class="mt-2" id="telefonoEmpleado2"></h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="modal fade" id="saveModal" tabindex="-1" aria-hidden="true">
@@ -112,7 +82,7 @@
                         <!-- Formulario saveForm -->
                         <form id="saveForm">
                             <!-- Campo oculto para asignar el id del registro al momento de modificar -->
-                            <input type="number" class="d-none" id="idDupla" name="idDupla">
+                            <input type="text" class="d-none" id="idDupla" name="idDupla">
                             <div class="">
                                 <div class="col-12">
                                     <h3>Datos generales</h3>
@@ -121,33 +91,13 @@
                                             <!-- Input de Usuario en una columna completa -->
                                             <div class="col-12 col-md-6 col-lg-4 mb-3">
                                                 <label for="usuarioDupla" class="form-label">Nombre dupla</label>
-                                                <input type="text" class="form-control" id="usuarioDupla"
+                                                <input type="text" class="form-control" id="usuarioNombreDupla"
                                                     name="usuarioDupla" placeholder="Ingrese un usuario..."
                                                     required>
                                             </div>
-
-                                            <!-- Claves en la misma fila -->
-                                            <div class="col-12" id="claveDupla">
-                                                <div class="row justify-content-center">
-                                                    <div class="col-6 col-md-3 mb-3">
-                                                        <label for="claveDupla" class="form-label">Clave</label>
-                                                        <input type="password" class="form-control" id="claveDupla"
-                                                            name="claveDupla" placeholder="Ingrese su clave..."
-                                                            required>
-                                                    </div>
-
-                                                    <div class="col-6 col-md-3 mb-3">
-                                                        <label for="claveDupla2" class="form-label">Repetir
-                                                            Clave</label>
-                                                        <input type="password" class="form-control" id="claveDupla2"
-                                                            name="claveDupla2" placeholder="Repita su clave..."
-                                                            required>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             <div class="col-4">
                                                 <label for="telefonoDupla" class="form-label">Teléfono de dupla</label>
-                                                <input type="text" class=" form-control" id="telefonoDupla"
+                                                <input type="text" class=" form-control" id="telefonoEmpresaDupla"
                                                     name="telefonoDupla" placeholder="Ingrese un numero valido..."
                                                     oninput="formatPhoneNumber(this)" required>
                                             </div>
@@ -271,7 +221,7 @@
     <script src="../../controllers/utils/inputValidator.js"></script>
     <!-- Llamada al controlador de la página web -->
     <!-- ! cambiar el link js para el controntrolador -->
-    <script src="../../controllers/admin/duplas.js"></script>
+    <script src="../../controllers/admin/detalle_dupla.js"></script>
 
 </body>
 
