--- a/views/admin/bodega.html
+++ b/views/admin/bodega.html
@@ -32,7 +32,7 @@
                     <div class="col-auto"> <!-- Changed to col-auto for automatic width based on content -->
                         <button type="button" class="py-4 btn btn-success disabled" onclick="showCategory(1)"
                             id="botonGeneral">
-                            <h5 class="mb-0" onclick="fillTable()">Ver todas las categorías</h5>
+                            <h5 class="mb-0" onclick="readAllTable(null, 1)">Ver todas las categorías</h5>
                             <!-- Added mb-0 to remove margin -->
                         </button>
                     </div>
@@ -82,7 +82,7 @@
                             <button type="submit" class="btn btn-success">
                                 <i class="bi bi-search"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" onclick="fillTable()">
+                            <button type="button" class="btn btn-secondary" onclick="readAllTable(null, 1)">
                                 <i class="bi bi-arrow-counterclockwise"></i>
                             </button>
                             <button type="button" class="btn btn-warning" onclick="openCreate()">
@@ -122,18 +122,19 @@
         <div class="modal fade" id="saveModal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered modal-lg">
                 <div class="modal-content bg-dark text-white">
+
                     <!-- Formulario saveForm -->
                     <form id="saveForm">
                         <!-- Campo oculto para asignar el id del registro al momento de modificar -->
                         <input type="number" class="d-none" id="idMaterial" name="idMaterial">
                         <form class="needs-validation">
-
+                            <div class="modal-header">
+                                <h5 class="fs-4 fw-bold text-center mb-4" id="modalTitle"></h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
                             <!-- Body del modal -->
                             <div class="modal-body">
-                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                                    aria-label="Close"></button> <!-- Cambiar color del botón de cerrar -->
-                                <h1 class="fs-4 fw-bold text-center mb-4" id="modalTitle"> </h1>
-
                                 <!-- Inputs -->
                                 <div class="row gy-3">
                                     <div class="col-6">
@@ -195,8 +196,67 @@
 
         <!-- modal para alterar la cantidad del material -->
         <div class="modal fade" id="materialModal" tabindex="-1" aria-hidden="true">
-            <div class="modal-dialog"></div>
+            <div class="modal-dialog modal-dialog-centered modal-sm">
+                <div class="modal-content bg-dark text-white">
+                    <!-- <form id=""></form> -->
+                    <!-- Campo oculto para asignar el id del registro al momento de modificar -->
+                    <input type="number" class="d-none" id="idMaterialCantidad" name="idMaterial">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Actualizar cantidad</h5>
+                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body d-flex flex-column align-items-center gap-3">
+                        <!-- gap-3 añade espacio vertical entre botones -->
+                        <button type="button" class="btn btn-secondary w-75" data-bs-target="#TipoMaterialModal"
+                            data-bs-toggle="modal"
+                            onclick="openQuantity(document.getElementById('idMaterialCantidad').value, 1)">
+                            <h3 class="mb-0">Agregar
+                                Material</h3>
+                        </button>
+                        <button type="button" class="btn btn-secondary w-75" data-bs-target="#TipoMaterialModal"
+                            data-bs-toggle="modal"
+                            onclick="openQuantity(document.getElementById('idMaterialCantidad').value, 2)">
+                            <h3 class="mb-0">Restar
+                                Material</h3>
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
+        <!-- modas para agregar o restar la cantidad del material -->
+        <div class="modal fade" id="TipoMaterialModal" tabindex="-1" data-bs-backdrop="static" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content bg-dark text-white">
+                    <form id="updateQuantityForm">
+                        <!-- Campo oculto para asignar el id del registro al momento de modificar -->
+                        <input type="number" class="d-none" id="idTipoMaterialCantidad" name="idMaterial">
+                        <div class="modal-header">
+                            <h2 class="modal-tittle" id="TipoAltMaterial"></h2>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body d-flex flex-column align-items-center gap-3 text-center">
+                            <h4>Cantidad Actual:</h4>
+                            <h4 class="text-white" id="cantidadActualMaterial"></h4>
+                            <h4>Nueva cantidad:</h4>
+                            <h4 id="cantidadActualizadaMaterial"></h4>
+                            <h4>Actualizas esto en js:</h4>
+                            <div class="input-group w-50">
+                                <span class="input-group-text">Cantidad</span>
+                                <input type="number" class="form-control" aria-label="Cantidad a modificar..."
+                                    id="actualizarMaterial" name="cantidadMaterial"
+                                    oninput="updateActualQuantity(this)">
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary">Guardar cambios</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </main>
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
     <!-- Llamada al framework y librería de mensajes -->
