avances en material:
- se muestra los materiales por categoría en el apartado publico.
-se actualizo la base de datos con 2 parámetros nuevos en la tabla de materiales (imagen y tipo unidad).
-se actualizo el menu del public y administrador
- se agrego el apartado para mostrar y agregar materiales a las requisiciones del public

--- a/views/public/inicio.html
+++ b/views/public/inicio.html
@@ -32,7 +32,12 @@
                 <div class="mt-5 row" id="buttonsOptions">
                 </div>
             </form>
-            <hr class="border-3">
+            <hr class="border-5">
+            <a href="materiales.html">
+                <button type="button" class="btn btn-success my-3">
+                    <h1>solicitar material</h1>
+                </button>
+            </a>
             <div id="infoEmployee" class="d-flex flex-column gap-3">
                 <h3>Nombres empleados</h3>
                 <p class="h5" id="nombreEmpleado1"></p>
