correcciones en el código principal: - error en cambiar imagen administrador - agregar confirmación en editar los  registros en todos los campos -cambiar el nombre de cantidad minima de material a 'necesaria para solicitud' -agregar imagen en materiales (activar camara) -campo validación del formulario de resta y suma material -actualizar datos de empleado (administrador) -cambiar la cantidad minima de 1 a 0 o pasarlo a valor null -agregar iimagenes al material -agregar el tipo de unidad del material

--- a/views/admin/administradores.html
+++ b/views/admin/administradores.html
@@ -87,7 +87,7 @@
 
                             <!-- Body del modal -->
                             <div class="modal-body">
-                                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                                <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="modal"
                                     aria-label="Close"></button> <!-- Cambiar color del botón de cerrar -->
                                 <h1 class="fs-4 fw-bold text-center mb-4" id="modalTitle"> </h1>
 
