--- a/views/admin/perfil.html
+++ b/views/admin/perfil.html
@@ -194,7 +194,9 @@
                 <div class="modal-content bg-dark text-white">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="modalTitle"></h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="modal"
+                            aria-label="Close">
+                        </button>
                     </div>
                     <!-- Formulario para crear o actualizar un registro -->
                     <form action="" id="saveForm">
@@ -254,7 +256,9 @@
                 <div class="modal-content bg-dark text-white">
                     <div class="modal-header">
                         <h1 class="modal-title fs-5" id="modalTitle">Cambiar contraseña</h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="modal"
+                            aria-label="Close">
+                        </button>
                     </div>
                     <!-- Formulario para actualizar contraseña -->
                     <form id="passwordForm">
@@ -285,7 +289,6 @@
                 </div>
             </div>
         </div>
-
     </main>
 
     <!-- IMPORTACIÓN DE ARCHIVOS JAVASCRIPT -->
