--- a/views/admin/duplas.html
+++ b/views/admin/duplas.html
@@ -104,7 +104,7 @@
                     <div class="modal-header">
                         <!-- Cambiar color del botón de cerrar -->
                         <h1 class="fs-4 fw-bold text-center mb-4" id="modalTitle"> </h1>
-                        <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        <button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="modal"
                             aria-label="Close"></button>
                     </div>
                     <!-- Body del modal -->
