visualización de las requisiciones y el historial de las requisiciones del lado del trabajador

--- a/views/admin/bodega.html
+++ b/views/admin/bodega.html
@@ -193,6 +193,7 @@
                                                     <option value="Metros">Metros</option>
                                                     <option value="Piezas">Piezas</option>
                                                     <option value="Rollos">Rollos</option>
+                                                    <option value="Bobinas">Bobinas/option>
                                                 </select>
                                             </div>
                                             <div class="col-6">
